# projeto-covid-series-temporais

./: .gitignore  app.py  index.py  pyproject.toml
R/: .renvignore  README.md  ajuste_tendencia.R  app.R  app1.R  app2.R  autocorr.R  avalia_estimacao.R  bayesian.R  compara_wave_count.R  dados_pais.csv  estados_cidades.csv  gera_dados.R  geracao_sarima.R  graficos_artigo.R  identificacao(p,q).Rmd  kriston_method.R  likelihoods.R  metrics.R  minimo_erro  minimo_erro.stan  modelo_stan_tendencia  modelo_stan_tendencia.stan  sazonalidade.R  simulacao.R  stan.R  tendencia.R  wave_counting.R
dados/: estados_cidades.csv
dados/cidades/: dados Acre Acrelândia .csv  dados Acre Assis Brasil .csv  dados Acre Brasiléia .csv  dados Acre Bujari .csv  dados Acre Capixaba .csv  dados Acre Cruzeiro do Sul .csv  dados Acre Epitaciolândia .csv  dados Acre Feijó .csv  dados Acre Jordão .csv  dados Acre Manoel Urbano .csv  dados Acre Marechal Thaumaturgo .csv  dados Acre Mâncio Lima .csv  dados Acre Plácido de Castro .csv  dados Acre Porto Acre .csv  dados Acre Porto Walter .csv  dados Acre Rio Branco .csv  dados Acre Rodrigues Alves .csv  dados Acre Santa Rosa do Purus .csv  dados Acre Sena Madureira .csv  dados Acre Senador Guiomard .csv  dados Acre Tarauacá .csv  dados Acre Xapuri .csv  dados Alagoas Anadia .csv  dados Alagoas Arapiraca .csv  dados Alagoas Atalaia .csv  dados Alagoas Barra de Santo Antônio .csv  dados Alagoas Barra de São Miguel .csv  dados Alagoas Batalha .csv  dados Alagoas Belo Monte .csv  dados Alagoas Belém .csv  dados Alagoas Boca da Mata .csv  (+5539 more)
layouts/: menu.py
(+60 files in other folders)
