[tool.poetry]
name = "projeto"
version = "0.1.0"
description = ""
authors = ["Lucas dos Santos Rodrigues Szavara <szavara.lucas.santos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
dash = "^2.13.0"
numpy = "^1.26.0"
pandas = "^2.1.0"
dash-bootstrap-components = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
